--- a/Cursos.html
+++ b/Cursos.html
@@ -4,7 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <title>Cursos disponibles</title>
+
     <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -27,8 +31,8 @@
     <img src="./images/livinggreenery.jpg" alt="Living estilo greenery"/>
 
     <footer>
-        <h2>Armonía del Río</h2>
-        <h2>Buenos Aires, Argentina</h2>
+        <h4>Armonía del Río</h4>
+        <h4>Buenos Aires, Argentina</h4>
     </footer>
     
 </body>  
