--- a/Sobre-mi.html
+++ b/Sobre-mi.html
@@ -4,14 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <title>¿Quién soy?</title>
-    <link rel="stylesheet" type="text/css" href="./css/style.css">
 
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <nav>
     
-        <h1>Armonía del Río</h1>
+        <h1 class="title">Armonía del Río</h1>
         <ul class="nav-list">
             <li><a href="./index.html">Inicio</a></li>
             <li><a href="./Cursos.html">Cursos</a></li>
@@ -24,8 +26,8 @@
     <p class="paragraph">Soy Diseñadora de Interiores</p>
 
     <footer>
-        <h2>Armonía del Río</h2>
-        <h2>Buenos Aires, Argentina</h2>
+        <h4>Armonía del Río</h4>
+        <h4>Buenos Aires, Argentina</h4>
     </footer>
 
 </body>
