--- a/asesorías.html
+++ b/asesorías.html
@@ -4,7 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <title>Asesorías Personalizadas</title>
+
     <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
 
 </head>
 
@@ -24,8 +27,8 @@
     <p class="paragraph">Agendá la tuya!</p>
 
     <footer>
-        <h2>Armonía del Río</h2>
-        <h2>Buenos Aires, Argentina</h2>
+        <h4>Armonía del Río</h4>
+        <h4>Buenos Aires, Argentina</h4>
     </footer>
 
 </body>
