--- a/contacto.html
+++ b/contacto.html
@@ -4,14 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <title>Hablemos!</title>
+
     <link rel="stylesheet" type="text/css" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    
 
 </head>
 
 <body>
     <nav>
 
-        <h1>Armonía del Río</h1>
+        <h1 class="title">Armonía del Río</h1>
         <ul class="nav-list">
             <li><a href="./index.html">Inicio</a></li>
             <li><a href="./Cursos.html">Cursos</a></li>
@@ -48,8 +52,8 @@
 
 
     <footer>
-        <h2>Armonía del Río</h2>
-        <h2>Buenos Aires, Argentina</h2>
+        <h4>Armonía del Río</h4>
+        <h4>Buenos Aires, Argentina</h4>
     </footer>
 
 </body>
