--- a/Cursos.html
+++ b/Cursos.html
@@ -23,12 +23,22 @@
         </ul>
     </nav>
 
-    <h3 class="paragraph">Diseño de Balcones y Jardines</h3>
-    <img src="./images/balcongreenery.jpg" alt="Balcon estilo greenery"/>
-    <h3 class="paragraph">Diseño de Cocinas</h3>
-    <img src="./images/cocinagreenery.jpg" alt="Cocina estilo greenery"/>
-    <h3 class="paragraph">Diseño de Livings</h3>
-    <img src="./images/livinggreenery.jpg" alt="Living estilo greenery"/>
+    <section class="services">
+        <div class="servicesItems">
+            <h3 class="paragraph">Diseño de Balcones y Jardines</h3>
+            <img src="./images/balcongreenery.jpg" alt="Balcon estilo greenery"/>
+        </div>
+      
+        <div class="servicesItems">
+            <h3 class="paragraph">Diseño de Cocinas</h3>
+            <img src="./images/cocinagreenery.jpg" alt="Cocina estilo greenery"/>
+        </div>
+      
+        <div class="servicesItems">
+            <h3 class="paragraph">Diseño de Livings</h3>
+            <img src="./images/livinggreenery.jpg" alt="Living estilo greenery"/>
+        </div>
+    </section>  
 
     <footer>
         <h4>Armonía del Río</h4>
