--- a/Sobre-mi.html
+++ b/Sobre-mi.html
@@ -23,7 +23,15 @@
         </ul>
     </nav>
 
-    <p class="paragraph">Soy Diseñadora de Interiores</p>
+    <section class="aboutMe">
+        <h1 class="paragraph"> Daniela del Rio </h1>
+        <p class="paragraph">Hola! Soy Dani, Técnica en Equipamiento Interior, y próxima a recibirme en la carrera de 
+        Diseño de Interiores de la Universidad de Morón </p>
+        
+        <img src="./images/daniela.jpg" alt="daniela" />
+
+    </section>
+   
 
     <footer>
         <h4>Armonía del Río</h4>
