--- a/asesorías.html
+++ b/asesorías.html
@@ -24,7 +24,10 @@
         </ul>
     </nav>
 
+   <section>
     <p class="paragraph">Agendá la tuya!</p>
+
+   </section> 
 
     <footer>
         <h4>Armonía del Río</h4>
