--- a/contacto.html
+++ b/contacto.html
@@ -29,24 +29,21 @@
         
         <p class="paragraph">Contactame en Instagram o llena este formulario</p>
 
-    <form action=# method="POST" enctype="application/x-www-form-urlencoded"> 
-        <input type="text" name="Nombre" placeholder="Ingresá tu nombre acá">
-        <input type="email" name="email" placeholder="Ingresá tu email acá">
-        <select name="estado civil"> 
-            <option>Soltero/a</option>
-            <option>Casado/a</option>
-            <option>Divorciado/a</option>
-        </select>
-        
-            <input type="checkbox" name="acepta" value="Si"> Querés recibir nuestro newsletter?
-            <textarea name="mensaje" placeholder="Contanos que quisieras saber" cols="20" rows="3">
-
+        <form action=# method="POST" enctype="application/x-www-form-urlencoded"> 
+            <input class="formItem" type="text" name="Nombre" placeholder="Ingresá tu nombre acá">
+            <input class="formItem" type="email" name="email" placeholder="Ingresá tu email acá">
+            <select class="formItem" name="estado civil"> 
+                <option>Soltero/a</option>
+                <option>Casado/a</option>
+                <option>Divorciado/a</option>
+            </select>
+            <input class="formItem" type="checkbox" name="acepta" value="Si"> Querés recibir nuestro newsletter?
+            <textarea class="formItem" name="mensaje" placeholder="Contanos que quisieras saber" cols="20" rows="3">
             </textarea>
+            <input class="formItem" type="submit" value="Enviar formulario"/>
+            <input class="formItem" type="reset" value="Limpiar formulario"/>
 
-        <input type="submit" value="Enviar formulario"/>
-        <input type="reset" value="Limpiar formulario"/>
-
-    </form>
+        </form>
 
     </section>
 
