desafío grid clase 7
Agregué grid al proyecto en la sección cursos

--- a/index.html
+++ b/index.html
@@ -2,6 +2,8 @@
 <html lang="es">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+
     <title>Cursos y asesorías personalizadas</title>
 
     <link rel="stylesheet" type="text/css" href="./css/style.css">
@@ -22,6 +24,8 @@
     
     <section>
         <p class="paragraph">Si te interesa lo que ves acá, te invito a que visites nuestras redes sociales</p>
+        <img src="images/retrato-joven-hermosa-mujer-morena-modelo-chica-maquillaje-desnudo-ropa-verano-colorido-hipster-rosa-posando-junto-pared-mirando-felizmente_158538-8859.jpg" alt="daniela" />
+
     </section>
 
     <footer>
