desafío 8 y segunda entrega del proyecto final
Entrega del desafío 8 y segunda entrega del proyecto final

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap" rel="stylesheet"> 
+
 </head>
 <body>
     <nav>
@@ -32,5 +34,7 @@
         <h4>Armonía del Río</h4>
         <h4>Buenos Aires, Argentina</h4>
     </footer>
+
+    <script src="https://kit.fontawesome.com/2474a945c9.js" crossorigin="anonymous"></script>
 </body>
 </html>
