--- a/contacto.html
+++ b/contacto.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;400&display=swap" rel="stylesheet"> 
     
 
 </head>
@@ -29,7 +30,7 @@
 
     <section>
         
-        <p class="paragraph">Contactame en Instagram o llena este formulario</p>
+        <p class="paragraph">¿Querés renovar tu casa? Contactame!</p>
 
         <form action=# method="POST" enctype="application/x-www-form-urlencoded"> 
             <input class="formItem" type="text" name="Nombre" placeholder="Ingresá tu nombre acá">
@@ -44,16 +45,26 @@
             </textarea>
             <input class="formItem" type="submit" value="Enviar formulario"/>
             <input class="formItem" type="reset" value="Limpiar formulario"/>
-
         </form>
 
     </section>
 
+    <section class="social"> 
+        <div class="socialIcons">  
+            <i class="fab fa-whatsapp"></i> 
+        </div>
+        <div class="socialIcons">
+            <i class="fab fa-instagram"></i>    
+        </div>
+        <div class="socialIcons">
+            <i class="fab fa-facebook-square"></i>
+        </div> 
+    </section>
 
     <footer>
         <h4>Armonía del Río</h4>
         <h4>Buenos Aires, Argentina</h4>
     </footer>
-
+    <script src="https://kit.fontawesome.com/2474a945c9.js" crossorigin="anonymous"></script>
 </body>
 </html>
