--- a/asesorías.html
+++ b/asesorías.html
@@ -7,6 +7,7 @@
 
     <title>Asesorías Personalizadas</title>
 
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="./css/style.css">
     <link href="https://fonts.googleapis.com/css2?family=Dancing+Script:wght@500;700&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
@@ -15,16 +16,25 @@
 </head>
 
 <body>
-    <nav>
-
+    <nav class="navbar navbar-expand-sm bg-light nav-list">
         <h1 class="title">Armonía del Río</h1>
-        <ul class="nav-list">
-            <li><a href="./index.html">Inicio</a></li>
-            <li><a href="./Cursos.html">Cursos</a></li>
-            <li><a href="./asesorías.html">Asesorías</a></li>
-            <li><a href="./Sobre-mi.html">Sobre mi</a></li>
-            <li><a href="./contacto.html">Contacto</a></li>
-        </ul>
+        <ul class="navbar-nav">
+          <li class="nav-item">
+            <a class="nav-link" href="./index.html">Inicio</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./Cursos.html">Cursos</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./asesorías.html">Asesorías</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./Sobre-mi.html">Sobre mi</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="./contacto.html">Contacto</a>
+          </li>
+        </ul>   
     </nav>
 
    <section>
@@ -37,5 +47,6 @@
         <h4>Buenos Aires, Argentina</h4>
     </footer>
     <script src="https://kit.fontawesome.com/2474a945c9.js" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"> </script>
 </body>
 </html>
