contenido de la página
nuevo contenido

--- a/Sobre-mi.html
+++ b/Sobre-mi.html
@@ -39,7 +39,9 @@
     <section class="aboutMe">
         <h1 class="paragraph"> Daniela del Rio </h1>
         <p class="paragraph">Hola! Soy Dani, Técnica en Equipamiento Interior, y próxima a recibirme en la carrera de 
-        Diseño de Interiores de la Universidad de Morón </p>
+        Diseño de Interiores de la Universidad de Morón. Siempre fui una apasionada por el diseño, en todas sus expresiones, pero no fue hasta que comencé mi carrera
+        que logré enamorarme por completo. Mi experiencia laboral más fuerte es en la rama de las ambientaciones de eventos sociales y corporativos, aunque después de formar mi familia y tener a mis dos hijos,
+      me di el gusto de incursionar en Candy Bar personalizados </p>
         
         <img src="./images/daniela.jpg" alt="daniela" />
 
